[package]
name = "ptx"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2021"

[lib]

[features]
rocm5 = ["hip_common/rocm5", "hip_runtime-sys/rocm5", "comgr/rocm5"]

[dependencies]
hip_common = { path = "../hip_common" }
zluda_llvm = { path = "../zluda_llvm" }
regex = "1"
thiserror = "1.0"
num-traits = "0.2"
rustc-hash = "1.1"
cpp_demangle = "0.3.5"
paste = "1.0"
bit-vec = "0.6.3"
either = "1.9"

[dependencies.half]
version = "1.8"
features = ["num-traits"]

[dependencies.lalrpop-util]
version = "0.22"
features = ["lexer"]

[dev-dependencies]
cuda_base = { path = "../cuda_base" }
cuda_types = { path = "../cuda_types" }
hip_runtime-sys = { path = "../hip_runtime-sys" }
hiprt-sys = { path = "../hiprt-sys" }
comgr = { path = "../comgr" }
tempfile = "3"
libloading = "0.8"
lazy_static = "1.4.0"

[build-dependencies.lalrpop]
version = "0.22"
features = ["lexer"]
