[package]
name = "zluda_blas"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2018"

[lib]
name = "cublas"
crate-type = ["cdylib"]

[features]
rocm5 = ["hip_common/rocm5", "zluda_dark_api/rocm5"]

[dependencies]
rocblas-sys = { path = "../rocblas-sys" }
rocsolver-sys = { path = "../rocsolver-sys" }
hip_common = { path = "../hip_common" }
zluda_dark_api = { path = "../zluda_dark_api" }
cuda_types = { path = "../cuda_types" }

[package.metadata.zluda]
linux_names = ["libcublas.so.10", "libcublas.so.11"]
dump_names = ["libcublas.so"]
