[package]
name = "zluda_runtime"
version = "0.0.0"
authors = ["Seunghoon Lee <op@lsh.sh>"]
edition = "2018"

[lib]
name = "cudart"
crate-type = ["cdylib"]

[dependencies]
cuda_types = { path = "../cuda_types" }
hip_common = { path = "../hip_common" }
hip_runtime-sys = { path = "../hip_runtime-sys" }
zluda_dark_api = { path = "../zluda_dark_api" }

[package.metadata.zluda]
linux_names = ["libcudart.so.10", "libcudart.so.11"]
dump_names = ["libcudart.so"]
