[package]
name = "zluda_runtime"
version = "0.0.0"
authors = ["Seunghoon Lee <op@lsh.sh>"]
edition = "2018"

[lib]
name = "cudart"
crate-type = ["cdylib"]

[features]
rocm5 = ["hip_common/rocm5", "hip_runtime-sys/rocm5", "zluda_dark_api/rocm5"]

[dependencies]
cuda_types = { path = "../cuda_types" }
hip_common = { path = "../hip_common" }
hip_runtime-sys = { path = "../hip_runtime-sys" }
zluda_dark_api = { path = "../zluda_dark_api" }
rustc-hash = "1.1"
lazy_static = "1.4.0"

[package.metadata.zluda]
broken = true
linux_names = ["libcudart.so.10", "libcudart.so.11"]
dump_names = ["libcudart.so"]
